# django-perfect-breadcrumbs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
django_perfect_breadcrumbs/: apps.py  builder.py  context_processors.py  middleware.py  settings.py
testproject/testapp/: views.py
testproject/testapp/templates/testapp/: _breadcrumbs.html  about.html  index.html  josh.html
testproject/testproject/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_builder.py
